# system-design-model-rust

./: Cargo.toml  README.md
docker/: docker-compose.yml
src/: influxdbreporter.rs  main.rs  objects.rs  systems.rs  traits.rs  utils.rs
