[package]
name = "system-design-model-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3" 
num-format = "0.4.3"
metriki-core = "1.7.4"
derive_builder = "0.12.0"
influxdb = { git = 'https://github.com/bogdad/influxdb-rust', branch = 'main' }
tokio = { version = "1.0", default-features = false, features = ["net", "time"] }
futures = "0.3.26"
reqwest= "0.11.14"
